# webphomet

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  ToDo.md  docker-compose.yml  reqs.txt
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agent/: client.py  executor.py  orchestrator.py  tools.py
backend/src/api/: admin.py  agent.py  breakpoints.py  correlations.py  findings.py  git_code.py  router.py  sessions.py  tools.py
backend/src/core/: breakpoints.py  correlator.py  logging.py  redis_pubsub.py  retention.py  safe_mode.py  schemas.py  scope.py  security.py  ws_manager.py
backend/src/db/: dal.py  database.py  models.py  persistence.py
backend/src/db/migrations/: .gitkeep
backend/src/jobs/: celery_app.py  workers.py
backend/src/mcp/: gateway.py
backend/src/mcp/cli_security/: server.py
backend/src/parsers/: __init__.py  dispatch.py  httpx.py  nmap.py  nuclei.py  secret_scanner.py  site_mirror.py  subfinder.py  whatweb.py
backend/src/reporting/: builder.py
backend/src/reporting/templates/: report.html.j2  report.md.j2
backend/src/services/: auth_tests.py  caido_sync.py  discovery.py  injection_tests.py  mobile_emulator.py  ssrf_tests.py  workflows.py
backend/tests/: conftest.py  test_api.py  test_breakpoints.py  test_code_analyzer.py  test_config.py  test_correlations_api.py  test_correlator.py  test_dal.py  test_executor.py  test_git_code.py  test_health.py  test_mobile_emulator.py  test_scope.py  test_security.py  test_tools.py  test_ws_manager.py
docs/: API.md  DEPLOYMENT.md  (+2 more)
(+39 files in other folders)
